# api-series

./: .env.example  .gitignore  main.py__old  pyproject.toml  tests.http
app/: .env  database.py  main.py
app/model/: serie.py
app/models/: serie.py
app/route/: serie.py
app/schema/: __init__.py  serie.py
